--- a/index.html
+++ b/index.html
@@ -5,28 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/main.css">
-    <script src="script.js" defer></script>
+    <script src="scripts/script.js" defer></script>
     <title>Mars Weather App</title>
 </head>
 <body>
     <main class="mars-current-weather">
         <h1 class="main-title">Latest weather at Elysium Planitia</h1>
         <div class="date">
-            <h2 class="section-title section-title--date">Sol 377</h2>
-            <p class="date__day">September 31</p>
+            <h2 class="section-title section-title--date">
+                Sol 
+                <span data-current-sol></span>
+            </h2>
+            <p class="date__day" data-current-date></p>
         </div>
         <div class="temp">
             <h2 class="section-title">Temperature</h2>
-            <p class="reading">High: -20°C</p>
-            <p class="reading">Low: -134°C</p>
+            <p class="reading">
+                High: 
+                <span data-current-temp-high></span>
+                °<span data-temp-unit></span>
+            </p>
+            <p class="reading">
+                Low: 
+                <span data-current-temp-low></span>
+                °<span data-temp-unit></span>  
+            </p>
         </div>
         <div class="wind">
             <h2 class="section-title">Wind</h2>
-            <p class="reading">75kph</p>
+            <p class="reading">
+                <span data-wind-speed></span>
+                <span data-speed-unit></span>ph
+            </p>
             <div class="wind__direction">
-                <p class="sr-only">45deg</p>
+                <p class="sr-only" data-wind-direction-text></p>
                 <!-- Update --direction custom property in JS to update the arrow direction -->
-                <div class="wind__arrow"></div>
+                <div class="wind__arrow" data-wind-direction-arrow></div>
             </div>
         </div>
         <div class="info">
@@ -37,67 +51,38 @@
         <div class="unit">
             <label for="cel">°C</label>
             <input type="radio" id="cel" name="unit" checked>
-            <button class="unit__toggle"></button>
+            <button class="unit__toggle" data-unit-toggle></button>
             <label for="fah">°F</label>
             <input type="radio" id="fah" name="unit">
         </div>
     </main>
 
-    <div class="previous-weather show-weather">
+    <div class="previous-weather">
         <!-- When clicked, toggle class of ".show-weather" on .previous-weather div -->
         <button for="weather-toggle" class="show-previous-weather-button"><span class="show-previous-weather-arrow">&#8593;</span> <span class="sr-only">Show previous weather</span></button>
         <h2 class="main-title previous-weather__title">Previous 7 days</h2>
-        <div class="previous-days">
-            <div class="previous-day">
-                <h3 class="previous-day__sol">Sol 371</h3>
-                <p class="previous-day__date">September 31</p>
-                <p class="previous-day__temp">High: -20°C</p>
-                <p class="previous-day__temp">Low: -120°C</p>
-                <button class="previous-day__more-info">more info</button>
-            </div>
-            <div class="previous-day">
-                <h3 class="previous-day__sol">Sol 371</h3>
-                <p class="previous-day__date">September 31</p>
-                <p class="previous-day__temp">High: -20°C</p>
-                <p class="previous-day__temp">Low: -120°C</p>
-                <button class="previous-day__more-info">more info</button>
-            </div>
-            <div class="previous-day">
-                <h3 class="previous-day__sol">Sol 371</h3>
-                <p class="previous-day__date">September 31</p>
-                <p class="previous-day__temp">High: -20°C</p>
-                <p class="previous-day__temp">Low: -120°C</p>
-                <button class="previous-day__more-info">more info</button>
-            </div>
-            <div class="previous-day">
-                <h3 class="previous-day__sol">Sol 371</h3>
-                <p class="previous-day__date">September 31</p>
-                <p class="previous-day__temp">High: -20°C</p>
-                <p class="previous-day__temp">Low: -120°C</p>
-                <button class="previous-day__more-info">more info</button>
-            </div>
-            <div class="previous-day">
-                <h3 class="previous-day__sol">Sol 371</h3>
-                <p class="previous-day__date">September 31</p>
-                <p class="previous-day__temp">High: -20°C</p>
-                <p class="previous-day__temp">Low: -120°C</p>
-                <button class="previous-day__more-info">more info</button>
-            </div>
-            <div class="previous-day">
-                <h3 class="previous-day__sol">Sol 371</h3>
-                <p class="previous-day__date">September 31</p>
-                <p class="previous-day__temp">High: -20°C</p>
-                <p class="previous-day__temp">Low: -120°C</p>
-                <button class="previous-day__more-info">more info</button>
-            </div>
-            <div class="previous-day">
-                <h3 class="previous-day__sol">Sol 371</h3>
-                <p class="previous-day__date">September 31</p>
-                <p class="previous-day__temp">High: -20°C</p>
-                <p class="previous-day__temp">Low: -120°C</p>
-                <button class="previous-day__more-info">more info</button>
-            </div>
-        </div>
+        <div class="previous-days" data-previous-sols></div>
     </div>
+
+    <template data-previous-sol-template>
+        <div class="previous-day">
+            <h3 class="previous-day__sol">
+                Sol 
+                <span data-sol></span>
+            </h3>
+            <p class="previous-day__date" data-date></p>
+            <p class="previous-day__temp">
+                High: 
+                <span data-temp-high></span>
+                °<span data-temp-unit></span>
+            </p>
+            <p class="previous-day__temp">
+                Low: 
+                <span data-temp-low></span>
+                °<span data-temp-unit></span>
+            </p>
+            <button class="previous-day__more-info" data-select-button>more info</button>
+        </div>
+    </template>
 </body>
 </html>
